[package]
name = "stackover-load"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3"
anyhow = "1"
reqwest = { version = "0.11.6", features = ["stream"] }
tokio = { version = "1", features = ["full"] }